fixing repo url

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/seranduless/client.git"
+        "url": "git://github.com/serandules/client.git"
     }
 }
