--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
         "email": "serandives@gmail.com"
     },
     "dependencies": {
-        "logger": "serandules/logger#master",
-        "debug":"*",
-        "mongoose": "3.8.12"
+        "mongoose": "4.*",
+        "logger": "serandules/logger#master"
     },
     "repository": {
         "type": "git",
